--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js" integrity="sha256-yr4fRk/GU1ehYJPAs8P4JlTgu0Hdsp4ZKrx8bDEDC3I=" crossorigin="anonymous"></script>
 </head>
 <body>
-<div>X:<span id="xvalue"></span> Y:<span id="yvalue"></span></div>
+<div>X:<span id="xvalue"></span> Y:<span id="yvalue"></span> PEN:<span id="penstat"></span></div>
 <div>L:<span id="lvalue"></span> R:<span id="rvalue"></span> U:<span id="uvalue"></span></div>
 <div id="debug_msg"></div>
 <h1>移動</h1>
@@ -44,7 +44,7 @@
 <button id="send_text">送信</button>
 
 <script type="text/javascript">
-  var socket = io('192.168.10.17:5000');
+  var socket = io('<?php echo $_SERVER['SERVER_ADDR']; ?>:5000');
 
   window.onload = function(){
 
@@ -57,15 +57,17 @@
     var lvalue = document.getElementById("lvalue");
     var rvalue = document.getElementById("rvalue");
     var uvalue = document.getElementById("uvalue");
+    var penstat = document.getElementById("penstat");
     var debmsg = document.getElementById("debug_msg");
 
     socket.on('status', function(str) {
         obj = JSON.parse(str);
-        xvalue.innerHTML = obj.x;
-        yvalue.innerHTML = obj.y;
-        lvalue.innerHTML = obj.l;
-        rvalue.innerHTML = obj.r;
-        uvalue.innerHTML = obj.u;
+        xvalue.innerHTML = obj.X;
+        yvalue.innerHTML = obj.Y;
+        lvalue.innerHTML = obj.L;
+        rvalue.innerHTML = obj.R;
+        uvalue.innerHTML = obj.U;
+        penstat.innerHTML = obj.PEN;
         //document.getElementById("robot_status").innerHTML = str;
     });
 
@@ -94,10 +96,10 @@
     };
 
     document.getElementById("pen_up").onclick = function() {
-        socket.emit('json', {cmd: 'w0'});
+        socket.emit('json', {cmd: 'up'});
     };
     document.getElementById("pen_down").onclick = function() {
-        socket.emit('json', {cmd: 'w1'});
+        socket.emit('json', {cmd: 'dn'});
     };
 
     document.getElementById("arm_l_uclock").onclick = function() {
